# nuclide-identification

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  analyse_vae.ipynb  cnn_analysis.ipynb  cnn_validation.ipynb  config.py  data_analysis.ipynb  data_analysis.py  databasegamma.parquet  distribution_plots.ipynb  docker-compose.yaml  example.py  example_label_syntehtics.py  example_plot_processed_spectrum.py  example_vae_process.py  examples.ipynb  findpeak.py  generate_samples.py  pipeline.py  plot_processed_measurements.py  pyproject.toml  randomforest_analysis.ipynb  refinding.ipynb  roc_curve_test.py  some_plots.ipynb  start_dashboard.py  temporary.py  test.py  test_cnn.py  test_pipeline.py  test_splitter.py  validation_cnn.ipynb  validationdataset_analysis.ipynb
config/: config_local.yaml  config_service.yaml  loader.py
docker-entrypoint-initdb.d/: init.sh
docs/source/: conf.py  index.rst  measurements.rst  nuclides.rst  synthetics.rst
notebooks/: cnn_analysis.ipynb  cnn_validation.ipynb  data_analysis.ipynb  examples.ipynb  randomforest_analysis.ipynb  vae_analysis.ipynb  validationdataset_analysis.ipynb
src/: __init__.py  convert_data_to_csv_json.py  get_data_from_api.py  measurements.py  nuclide.py  nuclide_dashboard.py  simulation.py
src/cnn/: cnn.py  cnn_vae.py  dataset.py  training.py
src/dashboard/: Dockerfile  dashboard.py
src/dashboard/pages/: dashboard.py  generator.py  peaks.py  processed.py
src/generator/: api.py  generator.py
src/measurements/: __init__.py  api.py  measurements.py  resplitter.py  splitter.py
src/nuclide/: api.py  download.py
src/peaks/: api.py  finder.py  refinder.py
src/pipeline/: pipeline.py
src/randomforest/: rf.py
src/statistics/: api.py
src/synthetics/: __init__.py  cnn_vae.py  hyperparameter.py  measurement_dataset.py  synthetics.py  vae.py  vae_model.py
src/vae/: api.py  measurement.py  measurement_dataset.py  training.py  vae.py  vae_model.py
src/visualization/: descriptive.py
