[tool.poetry]
name = "nuclide-identification"
version = "0.1.0"
description = ""
authors = ["Vitali Krilov <vitali9394@yahoo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
plotly = "^5.24.1"
dash = "^2.18.2"
torch = {version = "^2.5.1+cu124", source = "pytorch_gpu"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch_gpu"}
torchaudio = {version = "^2.5.1+cu124", source = "pytorch_gpu"}
tqdm = "^4.67.1"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-copybutton = "^0.5.2"


[[tool.poetry.source]]
name = "pytorch_gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
